src/skins/vector/css/matrix-react-sdk/structures/login/_Login.scss
/*
Copyright 2015, 2016 OpenMarket Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

.mx_Login {
    width: 100%;
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;

    overflow: auto;
}

.mx_Login h2 {
    color: $primary-fg-color;
    font-weight: 300;
    margin-top: 32px;
    margin-bottom: 20px;
}

.mx_Login_box {
    width: 300px;
    min-height: 450px;
    padding-top: 50px;
    padding-bottom: 50px;
    margin: auto;
}

.mx_Login_logo {
    text-align: center;
    height: 150px;
    margin-bottom: 5px;
    margin-top: -15px;
}

.mx_Login_logo img {
    max-height: 100%
}

.mx_Login_support {
    text-align: center;
    font-size: 13px;
    margin-top: 0px;
    opacity: 0.7;
}

.mx_Login_field {
    width: 280px;
    border-radius: 3px;
    border: 1px solid $strong-input-border-color;
    font-weight: 300;
    font-size: 13px;
    padding: 9px;
    margin-bottom: 14px;
}

.mx_Login_fieldLabel {
    margin-top: -10px;
    margin-left: 8px;
    margin-bottom: 14px;
    font-size: 13px;
    opacity: 0.8;
}

.mx_Login_submit {
    margin-top: 35px;
    margin-bottom: 24px;
    width: 100%;
    border-radius: 40px;
    height: 40px;
    border: 0px;
    background-color: $accent-color;
    font-size: 15px;
    color: $accent-fg-color;
}

.mx_Home_submit {
    margin-top: 20px;
    margin-left: 35px;
    margin-bottom: 24px;
    width: 50%;
    border-radius: 40px;
    height: 40px;
    border: 0px;
    background-color: $accent-color;
    font-size: 15px;
    color: $accent-fg-color;
}

.mx_Login_label {
    font-size: 13px;
    opacity: 0.8;
}

.mx_Login_label_Home {
    font-size: 15px;
    opacity: 0.8;
}

.mx_Login_checkbox,
.mx_Login_radio {
    margin-right: 10px;
}

.mx_Login_create {
    display: block;
    text-align: center;
    width: 100%;
    font-size: 13px;
    opacity: 0.8;
}

.mx_Login_create:link {
    color: $primary-fg-color;
}

.mx_Login_links {
    display: block;
    text-align: center;
    margin-top: 15px;
    width: 100%;
    font-size: 13px;
    opacity: 0.8;
}

.mx_Login_links a:link {
   color: $primary-fg-color;
}

.mx_Login_prompt {
    padding-top: 15px;
    padding-bottom: 15px;
    font-size: 13px;
}

.mx_Login_forgot {
    font-size: 13px;
    opacity: 0.8;
}

.mx_Login_forgot:link {
    color: $primary-fg-color;
}

.mx_Login_loader {
    display: inline;
    position: relative;
    top: 2px;
    left: 8px;
}

.mx_Login_loader .mx_Spinner {
    display: inline;
}

.mx_Login_loader .mx_Spinner img {
    width: 16px;
    height: 16px;
}

.mx_Login_error {
    color: $warning-color;
    font-weight: bold;
    text-align: center;
/*
    height: 24px;
*/
    margin-top: 12px;
    margin-bottom: 12px;
}

.mx_Login_type_container {
    display: flex;
    margin-bottom: 14px;
}

.mx_Login_type_container_home {
    display: none;
    margin-bottom: 14px;
}

.mx_Login_type_label {
    flex-grow: 1;
    line-height: 35px;
}

.mx_Login_type_label_home {
    flex-grow: 1;
}

.mx_Login_type_dropdown {
    display: inline-block;
    min-width: 170px;
    align-self: flex-end;
    flex: 1 1 auto;
}

.mx_Login_type_dropdown_home {
    display: inline-block;
    min-width: 170px;
    align-self: flex-end;
    flex: 1 1 auto;
    margin-top: 17px;
    margin-left: 22px;
}

.mx_Login_field_group {
    display: flex;
}

.mx_Login_field_prefix {
    height: 34px;
    padding: 0px 5px;
    line-height: 33px;

    background-color: #eee;
    border: 1px solid #c7c7c7;
    border-right: 0px;
    border-radius: 3px 0px 0px 3px;

    text-align: center;
}

.mx_Login_field_suffix {
    height: 34px;
    padding: 0px 5px;
    line-height: 33px;

    background-color: #eee;
    border: 1px solid #c7c7c7;
    border-left: 0px;
    border-radius: 0px 3px 3px 0px;

    text-align: center;
    flex-grow: 1;
}

.mx_Login_username {
    height: 16px;
    flex-shrink: 1;
    min-width: 0px;
    border-radius: 3px;
}

.mx_Login_phoneNumberField {
    height: 16px;
}

.mx_Login_field_has_prefix {
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}

.mx_Login_field_has_suffix {
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

.mx_Login_phoneSection {
    display:flex;
}

.mx_Login_phoneCountry {
    margin-bottom: 14px;
    width: 150px;

    /* To override mx_Login_field_prefix */
    text-align: left;
    padding: 0px;
    background-color: $primary-bg-color;
}

.mx_Login_field_prefix .mx_Dropdown_input {
    /* To use prefix border instead of dropdown border */
    border: 0;
}

.mx_Login_phoneCountry .mx_Dropdown_option {
    /*
        To match height of mx_Login_field
        33px + 2px border from mx_Dropdown_option = 35px
    */
    height: 33px;
    line-height: 33px;
}

.mx_Login_phoneCountry .mx_Dropdown_option img {
    margin: 3px;
    vertical-align: top;
}

.mx_Dropdown mx_Login_type_dropdown{
  margin-right: 58px;
}

.mx_Login_box_postRegister {
    width: 430px;
    min-height: 450px;
    padding-top: 50px;
    padding-bottom: 50px;
    margin: auto;
}

